@@ -6,7 +6,12 @@ TOOLKIT
 
   * General
 
-- Added support for private CloudFront distributions (see below)
+- Added support for private and streaming CloudFront distributions (see 
+  below)
+- Improved compatibility with other S3 tools by setting the following
+  properties to true by default: 
+  "filecomparer.ignore-panic-dir-placeholders"
+  "filecomparer.ignore-s3organizer-dir-placeholders"
 - Added a new property "filecomparer.md5-files-root-dir" which allows MD5 
   files generated for file comparison purposes to be stored in a custom 
   path, instead of within the same directory structure as data files.
@@ -14,7 +19,11 @@ TOOLKIT
   symlink/alias files to be ignored by JetS3t applications when deciding
   which files to send to S3. Although "soft" links can be detected and 
   ignored, hard links cannot be detected and will be treated as ordinary 
-  files.   
+  files.
+- Added new property "filecomparer.ignore-s3organizer-dir-placeholders"
+  which allows JetS3t to ignore directory place-holder objects created
+  by the S3 Organizer Firefox extension when uploading or downloading
+  files.
 - Added support for the TargetGrants setting of logged S3 buckets. This
   allows you to set default ACL access permissions for S3 bucket logs
   generated by the service.
